Fixed layout issue in jQuery Sparklines, closes #1471

--- a/phpmyfaq/admin/assets/scss/style.scss
+++ b/phpmyfaq/admin/assets/scss/style.scss
@@ -207,6 +207,13 @@ body {
 }
 
 //
+// DASHBOARD
+//
+.jqstooltip {
+  box-sizing: content-box;
+}
+
+//
 // SETUP
 //
 .setup-content, .setup-footer {
